--- a/src/app/layout/styles.css
+++ b/src/app/layout/styles.css
@@ -5,5 +5,23 @@ body {
 }
 
 .ui.fixed.menu {
-    background-image: linear-gradient(135deg, rgb(115, 59, 24) 0%, rgb(49, 174, 33) 55%, rgb(12, 172, 116) 86%);
+    background-image: linear-gradient(
+        135deg, rgb(115, 59, 24) 0%, rgb(49, 174, 33) 55%, rgb(12, 172, 116) 86%);
+}
+
+.ui.main.container {
+    margin-top: 5em;
+}
+
+.masthead {
+    display: flex;
+    align-items: center;
+    background-image: linear-gradient(
+        135deg, rgb(115, 59, 24) 0%, rgb(49, 174, 33) 55%, rgb(12, 172, 116) 86%
+        ) !important;
+    height: 100vh;
+}
+
+.masthead h1.ui.header {
+    font-size: 3em;
 }
